Updating links to the docs

--- a/templates/index.html
+++ b/templates/index.html
@@ -129,8 +129,8 @@
             inserted to the collaborative string or when part of the string is deleted.</p>
           <h4>Edit the demo Collaborative String</h4>
           <textarea id="demoStringInput" style="margin-top: 10px"></textarea>
-          <a target="_blank" class="demoReferenceLink" href="https://developers.google.com/drive/eap/realtime/reference/gapi.drive.realtime.html#gapi.drive.realtime.CollaborativeString">Reference docs</a>
-           - <a target="_blank" href="view-source:https://realtimeplayground.appspot.com/js/rtpg.string.js">Source code</a>
+          <a target="_blank" class="demoReferenceLink" href="https://developers.google.com/drive/realtime/reference/gapi.drive.realtime.CollaborativeString">Reference docs</a>
+           - <a target="_blank" href="https://github.com/googledrive/realtime-playground/blob/master/js/rtpg.string.js">Source code</a>
         </div>
       </section>
 
@@ -157,8 +157,8 @@
               </td>
             </tr>
           </table>
-          <a target="_blank" class="demoReferenceLink" href="https://developers.google.com/drive/eap/realtime/reference/gapi.drive.realtime.html#gapi.drive.realtime.CollaborativeList">Link to reference doc</a>
-           - <a target="_blank" href="view-source:https://realtimeplayground.appspot.com/js/rtpg.list.js">Source code</a>
+          <a target="_blank" class="demoReferenceLink" href="https://developers.google.com/drive/realtime/reference/gapi.drive.realtime.CollaborativeList">Link to reference doc</a>
+           - <a target="_blank" href="https://github.com/googledrive/realtime-playground/blob/master/js/rtpg.list.js">Source code</a>
         </div>
       </section>
 
@@ -210,8 +210,8 @@
             </tr>
           </table>
 
-          <a target="_blank" class="demoReferenceLink" href="https://developers.google.com/drive/eap/realtime/reference/gapi.drive.realtime.html#gapi.drive.realtime.CollaborativeMap">Link to reference doc</a>
-           - <a target="_blank" href="view-source:https://realtimeplayground.appspot.com/js/rtpg.map.js">Source code</a>
+          <a target="_blank" class="demoReferenceLink" href="https://developers.google.com/drive/realtime/reference/gapi.drive.realtime.CollaborativeMap">Link to reference doc</a>
+           - <a target="_blank" href="https://github.com/googledrive/realtime-playground/blob/master/js/rtpg.map.js">Source code</a>
         </div>
       </section>
 
@@ -244,8 +244,8 @@
               <td><input type="text" id="demoCustomRating" /></td>
             </tr>
           </table>
-          <a target="_blank" class="demoReferenceLink" href="https://developers.google.com/drive/eap/realtime/reference/gapi.drive.realtime.html#gapi.drive.realtime.CollaborativeObject">Link to reference doc</a>
-           - <a target="_blank" href="view-source:https://realtimeplayground.appspot.com/js/rtpg.custom.js">Source code</a>
+          <a target="_blank" class="demoReferenceLink" href="https://developers.google.com/drive/realtime/reference/gapi.drive.realtime.CollaborativeObject">Link to reference doc</a>
+           - <a target="_blank" href="https://github.com/googledrive/realtime-playground/blob/master/js/rtpg.custom.js">Source code</a>
         </div>
       </section>
     </section>
