--- a/templates/index.html
+++ b/templates/index.html
@@ -264,6 +264,8 @@
     </div>
   </div>
 
+  <a href="https://github.com/googledrive/realtime-playground"><img style="position: absolute; bottom: 0; right: 0; border: 0;" src="/images/github.png" alt="Fork me on GitHub"></a>
+
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-25993200-2']);
