--- a/templates/index.html
+++ b/templates/index.html
@@ -254,6 +254,7 @@
 
   <div id="rightContainer" style="float: right; height: 100%;">
     <span id="logTitle" class="componentName" style="margin: 10px 0 5px 15px;">Event Logs</span>
+    <span id="filterLocalContainer"><input id="filterLocal" type="checkbox" onchange="if(this.checked){$('.localEvent').hide();}else{$('.localEvent').show();}">Hide local events</span></span>
     <div class="scrollBarBox">
       <div id="logContainer" class="scrollBarInner">
         <div class="kd-list">
