--- a/templates/index.html
+++ b/templates/index.html
@@ -265,7 +265,7 @@
     </div>
   </div>
 
-  <a href="https://github.com/googledrive/realtime-playground"><img style="position: fixed; bottom: 0; right: 0; border: 0;" src="/images/github.png" alt="Fork me on GitHub"></a>
+  <a href="https://github.com/googledrive/realtime-playground"><img style="position: fixed; bottom: 0; right: 0; border: 0; z-index:1000;" src="/images/github.png" alt="Fork me on GitHub"></a>
 
   <script type="text/javascript">
     var _gaq = _gaq || [];
