--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,9 @@
 <body>
   <div id="message"></div>
 
-  <header id="gc-googlebar">
-    <a id="gc-logo" href="/"> <img src="https://developers.google.com/images/developers-logo.png" alt="Google" /> </a>
-    <div class="gc-social"></div>
+  <header id="rp-googlebar">
+    <a id="rp-logo" href="/"> <img src="https://developers.google.com/images/developers-logo.png" alt="Google" /> </a>
+    <div class="rp-social"></div>
   </header>
 
   <div class="rp-appbar">
