Making sure that new local events get hidden if the checkbox is already checked.

--- a/templates/index.html
+++ b/templates/index.html
@@ -258,7 +258,7 @@
       </div>
     </div>
     <span id="logTitle" class="componentName" style="padding-top:1px;margin: 10px 0 5px 15px;">Event Logs
-    <span id="filterLocalContainer"><input id="filterLocal" type="checkbox" onchange="if(this.checked){$('.localEvent').hide();}else{$('.localEvent').show();}">Hide local events</span></span>
+    <span id="filterLocalContainer"><input id="filterLocal" type="checkbox">Hide local events</span></span>
     <div class="scrollBarBox">
       <div id="logContainer" class="scrollBarInner">
         <div class="kd-list">
