--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
   <div id="message"></div>
 
   <header id="rp-googlebar">
-    <a id="rp-logo" href="/"> <img src="https://developers.google.com/images/developers-logo.png" alt="Google" /> </a>
+    <a id="rp-logo" href="/"> <img src="/images/developers-logo.svg" alt="Google" /> </a>
     <div class="rp-social"></div>
   </header>
 
