removed extra index file

--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,9 @@
                 <input id="demoListAddContent" type="text"><br />
                 <button id="demoListClear" class="rp-button">Clear the list</button>
                 <button id="demoListSet" class="rp-button">Set selected item's value</button>
-                <input id="demoListSetContent" type="text">
+                <input id="demoListSetContent" type="text"><br />
+                <button id="demoListMove" class="rp-button">Move selected item to index</button>
+                <input id="demoListMoveItem" type="text">
               </td>
             </tr>
           </table>
