have index references mostly working

--- a/css/main.css
+++ b/css/main.css
@@ -2007,6 +2007,10 @@ Component: List
 	text-align: justify;
 }
 
+.rp-section-content table td{
+  vertical-align: top;
+}
+
 /*------------------------------------------------------------------
  Custom OAuth Playground
  ------------------------------------------------------------------*/
@@ -2171,6 +2175,20 @@ section.disabled {
   font-size: 14px;
   border-color: rgb(217,217,217);
   background-color: #fdfdfd;
+}
+#demoListInput li{
+  cursor: pointer;
+  padding: 5px;
+}
+#demoListInput li.active{
+  color: white;
+}
+#demoListInput li.muted {
+  color: white;
+  opacity: .5;
+}
+#demoListInput li.active.muted {
+  opacity: 1;
 }
 #demoListClear {
   margin: 10px 0;
