--- a/components/elements/app-globals.html
+++ b/components/elements/app-globals.html
@@ -7,8 +7,8 @@
         onAuthComplete: function (authResult) {
           that.onAuthComplete();
         },
-        appId: 'Your App Id',
-        clientId: 'Your Client Id'
+        appId: 'Your App Id Here',
+        clientId: 'Your Client Id Here'
       });
 
       var Movie = function () {};
