--- a/components/elements/realtime-demos.html
+++ b/components/elements/realtime-demos.html
@@ -27,7 +27,7 @@
     <core-signals
       on-core-signal-view-code="{{ viewCode }}">
     </core-signals>
-    <core-drawer-panel>
+    <core-drawer-panel responsiveWidth="1090px" drawerWidth="350px" rightDrawer="true">
       <div drawer class="drawer">
         <core-animated-pages id="drawer" selected="{{ page }}" transitions="tile-cascade list-cascade" on-core-animated-pages-transition-end="{{complete}}">
           <section></section>
