Restore clientId placeholder to non-Google test ID.

--- a/components/elements/app-globals.html
+++ b/components/elements/app-globals.html
@@ -8,7 +8,7 @@
           that.onAuthComplete();
         },
         appId: 'Your App Id Here',
-        clientId: '1054047045356-j8pgqgls9vdef3rl09hapoicumbte0bo.apps.googleusercontent.com'
+        clientId: 'Your Client Id Here'
       });
 
       var Movie = function () {};
