--- a/templates/playground.html
+++ b/templates/playground.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="description"
       content="The Google Drive Realtime API Playground showcases and allows you to experiment with the Google Drive Realtime API." />
+    <meta name="theme-color" content="#5677FC">
     <meta name="keywords"
       content="OAuth, Google, drive, realtime, api, javascript, operational, transforms" />
     <title>Google Drive Realtime Playground</title>
