moving appenging project over

--- a/components/elements/app-globals.html
+++ b/components/elements/app-globals.html
@@ -7,8 +7,8 @@
         onAuthComplete: function (authResult) {
           that.onAuthComplete();
         },
-        appId: 'Your App Id Here',
-        clientId: 'Your Client Id Here'
+        appId: '840867953062',
+        clientId: '840867953062.apps.googleusercontent.com'
       });
 
       var Movie = function () {};
