--- a/components/elements/realtime-demos.html
+++ b/components/elements/realtime-demos.html
@@ -19,7 +19,7 @@
     <app-globals id="globals"></app-globals>
     <core-ajax
       id="driveFileMetadataRequest"
-      url="https://www.googleapis.com/drive/v2/files/{{ documentId }}"
+      url="{{ documentTitleBaseUrl }}/drive/v2/files/{{ documentId }}"
       params='{}'
       handleAs="json"
       on-core-response="{{handleResponse}}">
@@ -78,6 +78,7 @@
             <div id="demoContainer" class="container" tile-cascade>
               <core-icon id="back-icon" icon="arrow-back" on-click="{{ back }}"></core-icon>
               <div class="doc-title">{{ documentTitle }}</div>
+              <div class="doc-sub-title" hidden?="{{ !model.isReadOnly }}">Read-only</div>
               <div id="intro" class="demo-card">
                 <div class="container">
                   <paper-shadow z="1"></paper-shadow>
@@ -105,7 +106,7 @@
                   </div>
                   <div class="content" hero-id="string-code-body">
                     <p>Collaborative strings are just like normal strings, except that all browser sessions will be notified and updated when the string changes. Events are fired when a collaborative string is modified.</p>
-                    <paper-input floatingLabel multiline id="stringInput" value="{{ collaborativeString }}" on-keyup="{{ onCollaborativeStringKeyup }}" label="type something..."></paper-input>
+                    <paper-input floatingLabel multiline disabled?="{{ model.isReadOnly }}" id="stringInput" value="{{ collaborativeString }}" on-input="{{ onCollaborativeStringInputChange }}" label="type something..."></paper-input>
                   </div>
                 </div>
               </div>
@@ -128,7 +129,7 @@
                       <div class="list-title">List Items</div>
                       <paper-radio-group id="listDemoGroup" selected="{{ selectedItem }}" on-change="{{ onRadioChange }}">
                         <template repeat="{{ listItem in collaborativeList }}">
-                          <paper-radio-button name="{{ listItem }}" label="{{ listItem }}"></paper-radio-button>
+                          <paper-radio-button disabled?="{{ model.isReadOnly }}" name="{{ listItem }}" label="{{ listItem }}" color="{{ myColor }}"></paper-radio-button>
                         </template>
                       </paper-radio-group>
                     </div>
@@ -139,18 +140,18 @@
                         </tr>
                         <tr>
                           <td><paper-button raised on-click="{{ onAddListItemClick }}" disabled?="{{ addItemValue.length == 0 }}">Add Item</paper-button></td>
-                          <td><paper-input floatingLabel id="addListItemInput" label="item name..." inputValue="{{ addItemValue }}"></paper-input></td>
+                          <td><paper-input floatingLabel id="addListItemInput" disabled?="{{ model.isReadOnly }}" label="item name..." inputValue="{{ addItemValue }}"></paper-input></td>
                         </tr>
                         <tr>
-                          <td><paper-button raised on-click="{{ onClearListClick }}" disabled?="{{ collaborativeList.length == 0 }}">Clear List</paper-button></td>
+                          <td><paper-button raised on-click="{{ onClearListClick }}" disabled?="{{ (collaborativeList.length == 0) || model.isReadOnly }}">Clear List</paper-button></td>
                         </tr>
                         <tr>
                           <td><paper-button raised on-click="{{ onSetListItemClick }}" disabled?="{{ setItemValue.length == 0 }}">Set Selected Item</paper-button></td>
-                          <td><paper-input floatingLabel id="setListItemInput" label="item name..." inputValue="{{ setItemValue }}"></paper-input></td>
+                          <td><paper-input floatingLabel id="setListItemInput" disabled?="{{ model.isReadOnly }}" label="item name..." inputValue="{{ setItemValue }}"></paper-input></td>
                         </tr>
                         <tr>
                           <td><paper-button raised on-click="{{ onMoveListItemClick }}" disabled?="{{ moveItemValue.length == 0 }}">Move Item To Index</paper-button></td>
-                          <td><paper-input floatingLabel id="moveListItemInput" label="new index..." inputValue="{{ moveItemValue }}"></paper-input></td>
+                          <td><paper-input floatingLabel id="moveListItemInput" disabled?="{{ model.isReadOnly }}" label="new index..." inputValue="{{ moveItemValue }}"></paper-input></td>
                         </tr>
                       </table>
                     </div>
@@ -196,15 +197,15 @@
                           <td><paper-button raised on-click="{{ onRemoveMapItemClick }}" disabled?="{{ !selectedMapItemKey }}">Remove Selected Item</paper-button></td>
                         </tr>
                         <tr>
-                          <td><paper-button raised on-click="{{ onClearMapClick }}" disabled?="{{ collaborativeMap.length == 0 }}">Clear List</paper-button></td>
+                          <td><paper-button raised on-click="{{ onClearMapClick }}" disabled?="{{ (collaborativeMap.length == 0) || model.isReadOnly }}">Clear List</paper-button></td>
                         </tr>
                         <tr>
                           <td><paper-button raised on-click="{{ onAddMapItemClick }}" disabled?="{{ !addMapKeyValue.length && !addMapValue.length }}">Add Pair</paper-button></td>
-                          <td><paper-input floatingLabel id="addMapKeyInput" inputValue="{{ addMapKeyValue }}" label="key..."></paper-input></td>
+                          <td><paper-input floatingLabel id="addMapKeyInput" disabled?="{{ model.isReadOnly }}" inputValue="{{ addMapKeyValue }}" label="key..."></paper-input></td>
                         </tr>
                         <tr>
                           <td></td>
-                          <td><paper-input floatingLabel id="addMapValueInput" inputValue="{{ addMapValue }}" label="value..."></paper-input></td>
+                          <td><paper-input floatingLabel id="addMapValueInput" disabled?="{{ model.isReadOnly }}" inputValue="{{ addMapValue }}" label="value..."></paper-input></td>
                         </tr>
                       </table>
                     </div>
@@ -213,7 +214,7 @@
               </div>
 
               <!-- Custom Demo -->
-              <div id="custom" class="demo-card" hero hero-id="custom-code">
+              <div id="custom" class="demo-card" hidden?="{{ !customDemo }}" hero hero-id="custom-code">
                 <div class="container">
                   <paper-shadow z="1"></paper-shadow>
                   <div class="title yellow" hero hero-id="custom-code-title">
@@ -236,19 +237,19 @@
                       <tbody>
                         <tr>
                           <td>Name</td>
-                          <td><paper-input id="customNameInput" on-keyup="{{ onNameKeyup }}" label="name..." value="{{ name }}"></paper-input></td>
+                          <td><paper-input id="customNameInput" disabled?="{{ model.isReadOnly }}" on-input="{{ onNameInputChange }}" label="name..." value="{{ name }}"></paper-input></td>
                         </tr>
                         <tr>
                           <td>Director</td>
-                          <td><paper-input id="customDirectorInput" on-keyup="{{ onDirectorKeyup }}" label="director..." value="{{ director }}"></paper-input></td>
+                          <td><paper-input id="customDirectorInput" disabled?="{{ model.isReadOnly }}" on-input="{{ onDirectorInputChange }}" label="director..." value="{{ director }}"></paper-input></td>
                         </tr>
                         <tr>
                           <td>Notes</td>
-                          <td><paper-input multiline id="customNotesInput" on-keyup="{{ onNotesKeyup }}" label="notes..." value="{{ notes }}"></paper-input></td>
+                          <td><paper-input multiline id="customNotesInput" disabled?="{{ model.isReadOnly }}" on-input="{{ onNotesInputChange }}" label="notes..." value="{{ notes }}"></paper-input></td>
                         </tr>
                         <tr>
                           <td>Rating</td>
-                          <td><paper-input id="customRatingInput" on-keyup="{{ onRatingKeyup }}" label="rating..." value="{{ rating }}"></paper-input></td>
+                          <td><paper-input id="customRatingInput" disabled?="{{ model.isReadOnly }}" on-input="{{ onRatingInputChange }}" label="rating..." value="{{ rating }}"></paper-input></td>
                         </tr>
                       </tbody>
                     </table>
@@ -452,7 +453,7 @@ function onCustomDemoChange (evt) {
   input.value = app.customDemo.director;
 }
 
-function onDirectorKeyup () {
+function onDirectorInputChange () {
   app.customDemo.director = document.querySelector('#directorInput').value;
   // This will fire a change event
 }
