--- a/css/testingStyles.css
+++ b/css/testingStyles.css
@@ -11,6 +11,35 @@ code span {
 	margin: 0 !important;
 }
 
+.scrim, .lightbox {
+	position: fixed;
+}
+
+.scrim {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: .5;
+	z-index: 1000;
+}
+
+.lightbox {
+	text-align: center;
+	background-color: white;
+	border-radius: 3px;
+	z-index: 1001;
+	width: 300px;
+	left: calc(50% - 150px);
+	top: 200px;
+	padding: 10px;
+}
+
+.lightbox paper-button {
+	cursor: pointer;
+}
+
 .hidden {
 	opacity: 0;
 	height: 0;
@@ -44,7 +73,7 @@ code span {
 	background-color: white;
 	width: 910px;
 	height: 150px;
-	z-index: 9999;
+	z-index: 500;
 	top: 0;
 	padding: 20px;
 	border-bottom: 1px solid #ccc;
@@ -74,7 +103,6 @@ code span {
 	display: inline-block;
 	width: 32px;
 	height: 32px;
-	background-image: url('../images/ajax-loader.gif');
 	margin: 0px 0px -6px 15px;
 }
 
