--- a/templates/test.html
+++ b/templates/test.html
@@ -85,11 +85,10 @@
         'collaborativeStringTests.js',
         'collaboratorObjectTests.js',
         'documentSaveStateChangedEventTests.js',
-        // 'documentTests.js',
-        // 'clientDocumentImportTests.js',
+        'documentTests.js',
+        'documentImportTests.js',
+        'documentSerializationTests.js',
         // 'serverImportTests.js',
-        // 'documentSerializationTests.js',
-        'serverImportTests.js',
         'documentSharing.js',
         'errorTests.js',
         'eventListenerTests.js',
