removing some tests

--- a/templates/test.html
+++ b/templates/test.html
@@ -85,9 +85,9 @@
         'collaborativeStringTests.js',
         'collaboratorObjectTests.js',
         'documentSaveStateChangedEventTests.js',
-        'documentTests.js',
-        'documentImportTests.js',
-        'documentSerializationTests.js',
+        // 'documentTests.js',
+        // 'documentImportTests.js',
+        // 'documentSerializationTests.js',
         // 'serverImportTests.js',
         'documentSharing.js',
         'errorTests.js',
