Fixing testing paper button

--- a/templates/test.html
+++ b/templates/test.html
@@ -29,7 +29,7 @@
     <div class="scrim hidden"></div>
     <div class="lightbox hidden">
       <h1>Please Authorize</h1>
-      <paper-button name="hi" id="authorize" label="Authorize" onclick="manualAuthorize()"></paper-button>
+      <paper-button name="hi" id="authorize" onclick="manualAuthorize()">Authorize</paper-button>
     </div>
     <script>
       window.testSuite = new FunctionalTesting('Google Drive Realtime API Test Suite');
